Fix wrapping in menu items

--- a/resources/skins.femiwiki/elements.less
+++ b/resources/skins.femiwiki/elements.less
@@ -19,7 +19,7 @@ html {
 body {
   padding: 0;
   color: @color-base15;
-  line-height: 1.7;
+  line-height: @line-height;
 
   // Word breaks shouldn't be used for CJK text
   word-break: keep-all;
